Fixed the hoover and scrollbar

--- a/src/components/DesignCard/DesignCard.module.css
+++ b/src/components/DesignCard/DesignCard.module.css
@@ -1,5 +1,5 @@
 .card {
-  margin: 0;
+  margin: 7%;
   text-align: left;
   width: inherit;
 }
@@ -72,6 +72,6 @@
 }
 
 .card:hover {
-  transform: scale(1.02);
-  transition: all 0.8s ease-in-out;
+  transform: scale(1.03);
+  transition: all 0.5s ease-in-out;
 }
