--- a/src/components/WorksGallery/WorksGallery.module.css
+++ b/src/components/WorksGallery/WorksGallery.module.css
@@ -3,8 +3,9 @@
   flex-wrap: wrap;
   justify-content: center;
   padding: 0;
-  margin-left: 4%;
-  margin-right: 4%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 1%;
   height: 100vh;
   overflow: hidden;
 }
@@ -15,8 +16,9 @@
 }
 
 .gridColumn {
-  margin: 1.5%;
+  margin: 0;
   height: 100%;
+  scrollbar-width: none;
   overflow-y: hidden;
 }
 
